--- a/fix_pls_god/scss/style.scss
+++ b/fix_pls_god/scss/style.scss
@@ -12,15 +12,11 @@ body {
 *:before {
     box-sizing: border-box;
 }
-// imports and variables
+// imports variables and components
 // ==========================================================================================
 @import "mixinsMain";
 @import "mediaMain";
-// @import "transitions";
-$fz__h1: calc(1.5em + 2vw);
-$fz__h2: calc(1em + 1.2vw);
-$fz__h3: calc(1em + 0.8vw);
-$fz__h4: calc(0.7em + 0.6vw);
+@import "_navigationComponents";
 // social items
 // ==========================================================================================
 .social__item {
@@ -89,81 +85,81 @@ header {
 }
 // navigation
 // ==========================================================================================
-.nav__container {
-    min-width: 85%;
-    height: 60px;
-    background-color: #504C58;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    z-index: 10;
-    a{
-        z-index: 2700;
-    }
-}
-ul.topnav {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-ul.topnav{
-    li a {
-        @include links;
-        font-size: $fz__h4;
-        font-weight: 300;
-        color: #C4C4C4;
-        padding: 15px 16px;
-    }
-    li a:hover {
-        color: #D4E1F4;
-        border-bottom: 1px solid #D4E1F4;
-        transition: .1s linear;
-    }
-    a.links{
-        color: #FE9C55;
-        text-decoration: none;
-        font-size: 20px;
-    }
-    a.links:hover{
-        color: #D4E1F4;
-    }
-}
-.responsive{
-    background-color: #504C58;
-    width: 100%;
-    height: 90vh;
-    position: absolute;
-    top: 70px;
-    transition: 0.3s;
-}
-.mobile__nav{
-    width: 100%;
-    top: 0;
-    right: 0;
-    position: fixed;
-    display: flex;
-    justify-content: flex-end;
-    .x{
-        background: url(../img/icons/menu.svg);
-        height: 70px;
-        width: 70px; 
-    }
-}
-.mobile__nav--responsive{
-    background-color: #504C58;
-    width: 100%;
-    transition: .3s;
-    .x{
-        background: url(../img/icons/menu.svg);
-        height: 70px;
-        width: 70px; 
-    }
-}
+// .nav__container {
+//     min-width: 85%;
+//     height: 60px;
+//     background-color: #504C58;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     position: fixed;
+//     z-index: 10;
+//     a{
+//         z-index: 2700;
+//     }
+// }
+// ul.topnav {
+//     width: 100%;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     list-style: none;
+//     margin: 0;
+//     padding: 0;
+// }
+// ul.topnav{
+//     li a {
+//         @include links;
+//         font-size: $fz__h4;
+//         font-weight: 300;
+//         color: #C4C4C4;
+//         padding: 15px 16px;
+//     }
+//     li a:hover {
+//         color: #D4E1F4;
+//         border-bottom: 1px solid #D4E1F4;
+//         transition: .1s linear;
+//     }
+//     a.links{
+//         color: #FE9C55;
+//         text-decoration: none;
+//         font-size: 20px;
+//     }
+//     a.links:hover{
+//         color: #D4E1F4;
+//     }
+// }
+// .responsive{
+//     background-color: #504C58;
+//     width: 100%;
+//     height: 90vh;
+//     position: absolute;
+//     top: 70px;
+//     transition: 0.3s;
+// }
+// .mobile__nav{
+//     width: 100%;
+//     top: 0;
+//     right: 0;
+//     position: fixed;
+//     display: flex;
+//     justify-content: flex-end;
+//     .x{
+//         background: url(../img/icons/menu.svg);
+//         height: 70px;
+//         width: 70px; 
+//     }
+// }
+// .mobile__nav--responsive{
+//     background-color: #504C58;
+//     width: 100%;
+//     transition: .3s;
+//     .x{
+//         background: url(../img/icons/menu.svg);
+//         height: 70px;
+//         width: 70px; 
+//     }
+// }
 // intro
 // ==========================================================================================
 .intro {
@@ -171,10 +167,8 @@ ul.topnav{
     height: 100vh;
     @include flex__center;
     background-color: rgba($color: #504C58, $alpha: .6);
-
 }
 .intro__wrapper {
-
     width: 85%;
     height: 50%;
     display: flex;
@@ -631,7 +625,6 @@ ul.topnav{
 
     }
 }
-
 // modal
 // ==========================================================================================
 .modal{
@@ -750,3 +743,4 @@ ul.topnav{
     display: none;
     z-index: 5000;
 }
+/////////////////////////////////////////////////////////////////////////////////////////////
