--- a/fix_pls_god/scss/mediaMain.scss
+++ b/fix_pls_god/scss/mediaMain.scss
@@ -1,4 +1,9 @@
-////Phone display 567px - 0////
+/////////////////////////////////////////////////////////////////////////////////////////////
+@media (min-width:568px){
+    .call a{
+        display: none;
+    }
+}
 /////////////////////////////////////////////////////////////////////////////////////////////
 @media (max-width:567px){
     .intro__main--button{
@@ -6,6 +11,7 @@
     }
     .intro__wrapper{
         flex-direction: column;
+        min-height: 390px;
     }
     .intro__social{
         display: flex;
@@ -13,6 +19,7 @@
     }
     .intro__text{
         text-align: center;
+        min-height: 270px;
     }
     .main__content{
         div{
@@ -31,11 +38,7 @@
         display: none;
     }
 }
-@media (min-width:568px){
-    .call a{
-        display: none;
-    }
-}
+/////////////////////////////////////////////////////////////////////////////////////////////
 @media (min-width:992px){
     .main__content{
         div{
@@ -51,6 +54,7 @@
         display: none;
     }
 }
+/////////////////////////////////////////////////////////////////////////////////////////////
 @media (max-width:992px){
     .main__content div {
         flex-direction: column;
@@ -61,15 +65,13 @@
     .price__btn--call{
         text-align: center;
     }
-    // 
     .sendReview{
         text-align: center;
     }
     .rewiews__footer{
         flex-direction: column;
         text-align: center;
-    }
-    // 
+    } 
     .nav__wrapper {
         visibility: hidden;
     }
@@ -127,3 +129,4 @@
         height: 50px;
     }
 }
+/////////////////////////////////////////////////////////////////////////////////////////////
