--- a/fix_pls_god/scss/mixinsMain.scss
+++ b/fix_pls_god/scss/mixinsMain.scss
@@ -1,5 +1,4 @@
-// mixins
-// ==========================================================================================
+/////////////////////////////////////////////////////////////////////////////////////////////
 @mixin links{
     list-style-type: none;
     text-decoration: none;
@@ -17,5 +16,10 @@
 @mixin transitions {
     transition: .1s linear;
 }
-
-    $fz__H1: calc(2em + 2vw);
+// Variables
+/////////////////////////////////////////////////////////////////////////////////////////////
+$fz__h1: calc(1.5em + 2vw);
+$fz__h2: calc(1em + 1.2vw);
+$fz__h3: calc(1em + 0.8vw);
+$fz__h4: calc(0.7em + 0.6vw);
+/////////////////////////////////////////////////////////////////////////////////////////////
