--- a/fix_pls_god/scss/rewiews.scss
+++ b/fix_pls_god/scss/rewiews.scss
@@ -8,12 +8,12 @@ body{
 *:before {
     box-sizing: border-box;
 }
-// imports
-// ==========================================================================================
+// imports variables components
+////////////////////////////////////////////////////////////////////////////////////////////
 @import "mediaMain";
 @import "mixinsMain";
-// navigation
-// ==========================================================================================
+@import "_navigationComponents.scss";
+/////////////////////////////////////////////////////////////////////////////////////////////
 .nav__wrapper{
     display: flex;
     justify-content: center;
@@ -21,81 +21,6 @@ body{
     height: 60px;
     position: fixed;
     width: 100%;
-}
-.nav__container {
-    min-width: 85%;
-    height: 60px;
-    background-color: #504C58;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    z-index: 10;
-    a{
-        z-index: 2700;
-    }
-}
-ul.topnav {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-ul.topnav{
-    li a {
-        @include links;
-        font-size: 16px;
-        font-weight: 300;
-        color: #C4C4C4;
-        padding: 15px 16px;
-    }
-    li a:hover {
-        color: #D4E1F4;
-        border-bottom: 1px solid #D4E1F4;
-        transition: .1s linear;
-    }
-    a.links{
-        color: #FE9C55;
-        text-decoration: none;
-        font-size: 20px;
-    }
-    a.links:hover{
-        color: #D4E1F4;
-    }
-}
-.responsive{
-    background-color: #504C58;
-    width: 100%;
-    height: 90vh;
-    position: absolute;
-    top: 70px;
-    transition: 0.3s;
-}
-.mobile__nav{
-    width: 100%;
-    top: 0;
-    right: 0;
-    position: fixed;
-    display: flex;
-    justify-content: flex-end;
-    .x{
-        background: url(../img/icons/menu.svg);
-        height: 70px;
-        width: 70px; 
-    }
-}
-.mobile__nav--responsive{
-    background-color: #504C58;
-    width: 100%;
-    transition: .3s;
-    .x{
-        background: url(../img/icons/menu.svg);
-        height: 70px;
-        width: 70px; 
-    }
 }
 .call{
     width: 100%;
@@ -110,8 +35,8 @@ ul.topnav{
         width: 70px;
     }
 }
-// navigation
-// ==========================================================================================
+// Main
+/////////////////////////////////////////////////////////////////////////////////////////////
 main{
     width: 100%;
     display: flex;
@@ -124,21 +49,23 @@ section{
     span{
         color: #504C58;
         padding: 10px 0;
+        font-size: $fz__h2;
     }
 }
 .rewiews__main--content{
     margin-top: 20px;
     span:first-child{
         color: #E1680F;
-        font-size: 18px;
+        font-size: $fz__h3;
     }
     span:nth-child(2){
         color: #C4C4C4;
-        font-size: 16px;
+        font-size: $fz__h4;
     }
     p{
         color: #504C58;
         font-weight: 200;
+        font-size: $fz__h4;
     }
     div{
         display: flex;
@@ -206,13 +133,16 @@ section{
     display: flex;
     justify-content: space-between;
     color: #828282;
+    span{
+        font-size: 18px;
+    }
     a{
         color: #828282;
         text-decoration: none;
     }
 }
 // modals
-// ==========================================================================================
+/////////////////////////////////////////////////////////////////////////////////////////////
 #rewievs__modal{
     display: none;
 }
@@ -285,8 +215,6 @@ section{
         right: 0;
     }
 }
-
-
 .reviews__modal--thanks{
     height: 100vh;
     width: 100%;
@@ -334,3 +262,4 @@ section{
         }
     }
 }
+/////////////////////////////////////////////////////////////////////////////////////////////
