--- a/fix_pls_god/scss/mediaMain.scss
+++ b/fix_pls_god/scss/mediaMain.scss
@@ -9,6 +9,9 @@
     .intro__main--button{
         display: none;
     }
+    #left__column{
+        display: none;
+    }
     .intro__wrapper{
         flex-direction: column;
         min-height: 390px;
