--- a/fix_pls_god/scss/price.scss
+++ b/fix_pls_god/scss/price.scss
@@ -1,33 +1,11 @@
-body{
-    margin: 0;
-    padding: 0;
-    font-family: gilroy, sans-serif;
-}
-*,
-*:after,
-*:before {
-    box-sizing: border-box;
-}
 // imports variables and components
 /////////////////////////////////////////////////////////////////////////////////////////////
 @import "mediaMain";
 @import "mixinsMain";
 @import "_navigationComponents.scss";
-/////////////////////////////////////////////////////////////////////////////////////////////
-.call{
-    width: 100%;
-    right: 0;
-    bottom: 0;
-    position: fixed;
-    display: flex;
-    justify-content: flex-end;
-    a{
-        background: url(../img/icons/call.svg);
-        height: 70px;
-        width: 70px;
-    }
-}
-// navigation
+@import "_bodyStyleComponents.scss";
+@import "_modalWindows.scss";
+@import "_socialIcon.scss";
 /////////////////////////////////////////////////////////////////////////////////////////////
 main{
     width: 100%;
@@ -51,11 +29,6 @@ section{
 /////////////////////////////////////////////////////////////////////////////////////////////
 .price__column{
     display: flex;
-}
-@media (max-width:567px){
-    #left__column{
-        display: none;
-    }
 }
 .price__left--column{
     background-color: #504C58;
@@ -125,7 +98,6 @@ section{
     }
 }
 /////////////////////////////////////////////////////////////////////////////////////////////
-
 .price__btn--call{
     button{
         width: 170px;
@@ -144,30 +116,6 @@ section{
         transition: .1s linear;
         cursor: pointer;
     }
-    }
-}
-/////////////////////////////////////////////////////////////////////////////////////////////
-.rewiews__social{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding: 20px 0;
-}
-.social__item--footer{
-    width: 40px;
-    height: 40px;
-    margin: 0 15px;
-    @include flex__center;
-    fill: #C4C4C4;
-    box-shadow: 5px 5px 18px rgba(8, 16, 22, 0.5);
-    border-radius: 50%;
-    &:hover{
-        fill: #8ddd0d;
-        transition: .1s linear;
-        cursor: pointer;
-    }
-    svg{
-        height: 35px;
     }
 }
 /////////////////////////////////////////////////////////////////////////////////////////////
@@ -198,115 +146,6 @@ section{
 }
 // modal
 /////////////////////////////////////////////////////////////////////////////////////////////
-.modal{
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    background-color: rgba(8, 16, 22, 0.55);
-    top: 0;
-    left: 0;
-    z-index: 5000;
-    display: flex;
-}
-.modal__dialog{
-    margin: 60px auto;
-    width: 27%;
-    height: 65%;
-    min-width: 350px;
-    max-height: 500px;
-    background-color: #504C58;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
-    p{
-        color: #D4E1F4;
-        width: 70%;
-        font-size: 18px;
-    }
-    button{
-        color: #504C58;
-        background-color: #FA8A37;
-        width: 250px;
-        height: 60px;
-        border: 1px solid #FA8A37;
-        border-radius: 50px;
-        outline: none;
-        font-size: 20px;
-        &:hover{
-            background-color: #504C58;
-            color: #FA8A37;
-            cursor: pointer;
-        }
-    }
-    input{
-        color: #FA8A37;
-        background-color: #504C58;
-        width: 250px;
-        height: 60px;
-        border: 1px solid #FA8A37;
-        border-radius: 50px;
-        outline: none;
-        font-size: 20px;
-        padding: 0 15px;
-        text-align: center;
-    }
-    img{
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-}
-.modal__send--wrapper{
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    background-color: rgba(8, 16, 22, 0.55);
-    top: 0;
-    left: 0;
-    z-index: 5000;
-    display: flex;
-}
-.modal__send{
-    margin: 60px auto;
-    width: 27%;
-    height: 65%;
-    min-width: 350px;
-    max-height: 500px;
-    background-color: #504C58;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
-    span{
-        font-size: 18px;
-        color: #D4E1F4;
-        width: 70%;
-    }
-    a{
-        color: #504C58;
-        background-color: #FA8A37;
-        width: 250px;
-        height: 60px;
-        border: 1px solid #FA8A37;
-        border-radius: 50px;
-        outline: none;
-        font-size: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-decoration: none;
-        &:hover{
-            background-color: #504C58;
-            color: #FA8A37;
-            cursor: pointer;
-        }    
-    }
-}
 #priceModalOrder{
     display: none;
     z-index: 5000;
