--- a/fix_pls_god/scss/style.scss
+++ b/fix_pls_god/scss/style.scss
@@ -1,57 +1,13 @@
-body {
-    padding: 0;
-    margin: 0;
-    font-family: gilroy, sans-serif;
-    color: white;
-    &.no-scroll{
-        // overflow: hidden;
-    }
-}
-*,
-*:after,
-*:before {
-    box-sizing: border-box;
-}
 // imports variables and components
-// ==========================================================================================
+/////////////////////////////////////////////////////////////////////////////////////////////
 @import "mixinsMain";
 @import "mediaMain";
 @import "_navigationComponents";
-// social items
-// ==========================================================================================
-.social__item {
-    width: 40px;
-    height: 40px;
-    @include flex__center;
-    fill: #FB9346;
-    &:hover{
-        fill: #C4C4C4;
-        transition: .1s linear;
-        cursor: pointer;
-    }
-    svg{
-        height: 35px;
-    }
-}
-.social__item--footer {
-    width: 40px;
-    height: 40px;
-    margin: 0 15px;
-    @include flex__center;
-    fill: #C4C4C4;
-    box-shadow: 5px 5px 18px rgba(8, 16, 22, 0.5);
-    border-radius: 50%;
-    &:hover{
-        fill: #f2f2f2;
-        transition: .1s linear;
-        cursor: pointer;
-    }
-    svg{
-        height: 35px;
-    }
-}
+@import "_bodyStyleComponents.scss";
+@import "_modalWindows.scss";
+@import "_socialIcon.scss";
 // header
-// ==========================================================================================
+/////////////////////////////////////////////////////////////////////////////////////////////
 header {
     width: 100%;
     height: 100vh;
@@ -70,96 +26,6 @@ header {
         position: fixed;
     }
 }
-.call{
-    width: 100%;
-    right: 0;
-    bottom: 0;
-    position: fixed;
-    display: flex;
-    justify-content: flex-end;
-    a{
-        background: url(../img/icons/call.svg);
-        height: 70px;
-        width: 70px;
-    }
-}
-// navigation
-// ==========================================================================================
-// .nav__container {
-//     min-width: 85%;
-//     height: 60px;
-//     background-color: #504C58;
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     position: fixed;
-//     z-index: 10;
-//     a{
-//         z-index: 2700;
-//     }
-// }
-// ul.topnav {
-//     width: 100%;
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     list-style: none;
-//     margin: 0;
-//     padding: 0;
-// }
-// ul.topnav{
-//     li a {
-//         @include links;
-//         font-size: $fz__h4;
-//         font-weight: 300;
-//         color: #C4C4C4;
-//         padding: 15px 16px;
-//     }
-//     li a:hover {
-//         color: #D4E1F4;
-//         border-bottom: 1px solid #D4E1F4;
-//         transition: .1s linear;
-//     }
-//     a.links{
-//         color: #FE9C55;
-//         text-decoration: none;
-//         font-size: 20px;
-//     }
-//     a.links:hover{
-//         color: #D4E1F4;
-//     }
-// }
-// .responsive{
-//     background-color: #504C58;
-//     width: 100%;
-//     height: 90vh;
-//     position: absolute;
-//     top: 70px;
-//     transition: 0.3s;
-// }
-// .mobile__nav{
-//     width: 100%;
-//     top: 0;
-//     right: 0;
-//     position: fixed;
-//     display: flex;
-//     justify-content: flex-end;
-//     .x{
-//         background: url(../img/icons/menu.svg);
-//         height: 70px;
-//         width: 70px; 
-//     }
-// }
-// .mobile__nav--responsive{
-//     background-color: #504C58;
-//     width: 100%;
-//     transition: .3s;
-//     .x{
-//         background: url(../img/icons/menu.svg);
-//         height: 70px;
-//         width: 70px; 
-//     }
-// }
 // intro
 // ==========================================================================================
 .intro {
@@ -204,27 +70,6 @@ header {
     }
     }
 }
-.intro__social a{
-    margin-bottom: 15px;
-}
-.intro__slides {
-    z-index: 11;
-    margin-top: 40px;
-    width: 150px;
-    display: flex;
-    justify-content: space-between;
-    button {
-        height: 17px;
-        width: 17px;
-        border-radius: 50%;
-        background-color: #504C58;
-        border: none;
-
-    }
-    button:hover {
-        background-color: #FE9C55;
-    }
-}
 // main
 // ==========================================================================================
 .main {
@@ -255,7 +100,6 @@ header {
         justify-content: center;
         div{
         box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.2);
-        // max-width: 320px;
         min-height: 180px;
         margin: 20px 10px 20px 10px;
         padding: 20px;
@@ -618,129 +462,13 @@ header {
     background-color: #504C58;
     box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
 }
-.social__item--footer{
-    fill: #D4E1F4;
-    &:hover{
-        box-shadow: 2px 1px 38px rgba(8, 16, 22, 0.7);
-
-    }
-}
 // modal
 // ==========================================================================================
-.modal{
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    background-color: rgba(8, 16, 22, 0.55);
-    top: 0;
-    left: 0;
-    z-index: 5000;
-    display: flex;
-}
-.modal__dialog{
-    margin: 60px auto;
-    width: 27%;
-    height: 65%;
-    min-width: 350px;
-    max-height: 500px;
-    background-color: #504C58;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
-    p{
-        color: #D4E1F4;
-        width: 70%;
-        font-size: 18px;
-    }
-    button{
-        color: #504C58;
-        background-color: #FA8A37;
-        width: 250px;
-        height: 60px;
-        border: 1px solid #FA8A37;
-        border-radius: 50px;
-        outline: none;
-        font-size: 20px;
-        &:hover{
-            background-color: #504C58;
-            color: #FA8A37;
-            cursor: pointer;
-        }
-    }
-    input{
-        color: #FA8A37;
-        background-color: #504C58;
-        width: 250px;
-        height: 60px;
-        border: 1px solid #FA8A37;
-        border-radius: 50px;
-        outline: none;
-        font-size: 20px;
-        padding: 0 15px;
-        text-align: center;
-    }
-    img{
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-}
-#footer__close--modal{
-    display: none;
-}
-.modal__send--wrapper{
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    background-color: rgba(8, 16, 22, 0.55);
-    top: 0;
-    left: 0;
-    z-index: 5000;
-    display: flex;
-}
-.modal__send{
-    margin: 60px auto;
-    width: 27%;
-    height: 65%;
-    min-width: 350px;
-    max-height: 500px;
-    background-color: #504C58;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
-    span{
-        font-size: 18px;
-        color: #D4E1F4;
-        width: 70%;
-    }
-    a{
-        color: #504C58;
-        background-color: #FA8A37;
-        width: 250px;
-        height: 60px;
-        border: 1px solid #FA8A37;
-        border-radius: 50px;
-        outline: none;
-        font-size: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-decoration: none;
-        &:hover{
-            background-color: #504C58;
-            color: #FA8A37;
-            cursor: pointer;
-        }    
-    }
-}
 #modalOrder{
     display: none;
     z-index: 5000;
+}
+#footer__close--modal{
+    display: none;
 }
 /////////////////////////////////////////////////////////////////////////////////////////////
