--- a/fix_pls_god/scss/_modalWindows.scss
+++ b/fix_pls_god/scss/_modalWindows.scss
@@ -14,6 +14,7 @@
     margin: 60px auto;
     width: 27%;
     height: 65%;
+    border-radius: 6px;
     min-width: 350px;
     max-height: 500px;
     background-color: #504C58;
@@ -75,6 +76,7 @@
     margin: 60px auto;
     width: 27%;
     height: 65%;
+    border-radius: 6px;
     min-width: 350px;
     max-height: 500px;
     background-color: #504C58;
@@ -126,7 +128,8 @@
     width: 27%;
     height: 65%;
     min-width: 320px;
-    max-height: 500px;
+    min-height: 320px;
+    border-radius: 6px;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -191,8 +194,9 @@
     margin: 70px auto;
     width: 27%;
     height: 65%;
+    border-radius: 6px;
     min-width: 320px;
-    max-height: 500px;
+    max-height: 400px;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -218,8 +222,6 @@
         align-items: center;
         text-decoration: none;
         &:hover{
-            background-color: #fff;
-            color: #504C58;
             cursor: pointer;
         }
     }
