--- a/fix_pls_god/scss/style.scss
+++ b/fix_pls_god/scss/style.scss
@@ -17,14 +17,6 @@ header {
     background: url(../img/picture/main-img-min.jpg) no-repeat;
     background-position: center center;
     background-size: cover;
-    .nav__wrapper{
-        width: 100%;
-        background-color: #504C58;
-        height: 60px;
-        display: flex;
-        justify-content: center;
-        position: fixed;
-    }
 }
 // intro
 // ==========================================================================================
@@ -45,6 +37,7 @@ header {
     span {
         color: #fff;
         font-size: $fz__h2;
+        font-weight: 300;
     }
     h1 {
         color: #D4E1F4;
@@ -99,12 +92,14 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         div{
-        box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.2);
-        min-height: 180px;
+        box-shadow: 1px 1px 18px rgba(8, 16, 22, 0.1);
+        // min-height: 180px;
+        width: 260px;
         margin: 20px 10px 20px 10px;
         padding: 20px;
         display: flex;
         flex-direction: column;
+        border-radius: 6px;
         }
     }
     span{
@@ -119,7 +114,6 @@ header {
         text-align: center;
         font-size: $fz__h4;
         font-weight: 300;
-
     }
     img{
         height: 60px;
@@ -149,7 +143,7 @@ header {
     span{
         font-size: $fz__h4;
         color: #C4C4C4;
-        padding: 20px;
+        padding: 20px 0;
     }
 }
 .price__container {
@@ -159,6 +153,7 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    border-radius: 6px;
     div{
         width: 50%;
         height: 100%;
@@ -247,10 +242,11 @@ header {
         flex-direction: column;
         align-items: center;
         margin: 20px 10px 30px 10px;
+        border-radius: 6px;
     }
 }
 .service__block{
-    box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.2);
+    box-shadow: 1px 1px 18px rgba(8, 16, 22, 0.1);
     div:first-child{
         margin-top: -60px;
     }
@@ -259,25 +255,32 @@ header {
     color: #fff;
     font-size: 110px;
     font-weight: 600;
+    padding-bottom: 30px;
 }
 .service__block--item{
     display: flex;
-    flex-direction: column;
+    div{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
     span{
         color: #E1680F;
         text-align: center;
         font-weight: 600;
-        padding: 10px;
+        padding:25px;
         font-size: $fz__h3;
     }
     p{
         color: #504C58;
-        padding: 25px;
+        padding: 20px;
         font-weight: 300;
         font-size: $fz__h4;
     }
     img{
         height: 110px;
+        margin: 0 0 15px 15px;
     }
 }
 // reviews
@@ -296,13 +299,13 @@ header {
             color: #E1680F;
             text-align: left;
             font-size: $fz__h2;
-            padding-bottom: 20px;
+            padding-bottom: 40px;
         }
         a{
             @include links;
             color: #E1680F;
             text-align: left;
-            margin-bottom: 50px;
+            margin-top: 20px;
             font-size: $fz__h4;
         }
         a:hover{
@@ -314,8 +317,9 @@ header {
     display: flex;
     justify-content: space-between;
     div{
-        margin: 20px 10px 20px 10px;
-        box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.15);
+        margin: 30px 10px 30px 10px;
+        box-shadow: 1px 1px 18px rgba(8, 16, 22, 0.1);
+        border-radius: 6px;
         div{
             box-shadow: none;
             display: flex;
@@ -371,7 +375,7 @@ header {
                 flex-direction: column;
                 justify-content: space-around;
                 span{
-                    padding-left: 45px;
+                    padding-left: 55px;
                     height: 27px;
                     display: flex;
                     font-size: $fz__h4;
@@ -398,19 +402,19 @@ header {
                 box-shadow: none;
             }
             .footer__button{
-                width: 170px;
+                width: 200px;
                 height: 50px;
-                background-color: #FA8A37;
+                background-color: #504C58;
                 outline: none;
                 border-radius: 50px;
-                color: #504C58;
+                color: #fff;
                 font-size: 15px;
-                border: none;
+                border: 1px solid #FA8A37;
                 box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
 
             &:hover{
                 color: #000;
-                background-color: #C4C4C4;
+                background-color: #FA8A37;
                 transition: .1s linear;
                 cursor: pointer;
             }
