--- a/fix_pls_god/scss/mixinsMain.scss
+++ b/fix_pls_god/scss/mixinsMain.scss
@@ -18,8 +18,8 @@
 }
 // Variables
 /////////////////////////////////////////////////////////////////////////////////////////////
-$fz__h1: calc(1.5em + 2vw);
-$fz__h2: calc(0.9em + 1.2vw);
-$fz__h3: calc(0.9em + 0.6vw);
-$fz__h4: calc(0.7em + 0.6vw);
+$fz__h1: calc(1.8rem + 2vw);
+$fz__h2: calc(1.2rem + 1.2vw);
+$fz__h3: calc(1.2rem + 0.5vw);
+$fz__h4: calc(1.2rem + 0.5vw);
 /////////////////////////////////////////////////////////////////////////////////////////////
