--- a/fix_pls_god/scss/rewiews.scss
+++ b/fix_pls_god/scss/rewiews.scss
@@ -8,6 +8,9 @@
 @import "_socialIcon.scss";
 // Main
 /////////////////////////////////////////////////////////////////////////////////////////////
+html{
+    font-size: 10px;
+}
 main{
     width: 100%;
     display: flex;
