--- a/fix_pls_god/scss/price.scss
+++ b/fix_pls_god/scss/price.scss
@@ -7,6 +7,9 @@
 @import "_modalWindows.scss";
 @import "_socialIcon.scss";
 /////////////////////////////////////////////////////////////////////////////////////////////
+html{
+    font-size: 10px;
+}
 main{
     width: 100%;
     display: flex;
@@ -36,7 +39,7 @@ section{
     flex-direction: column;
     margin-right: 40px;
     margin-top: 45px;
-    button{
+    .tab{
         text-decoration-line: none;
         color: #C4C4C4;
         background-color: #504C58;
@@ -57,6 +60,19 @@ section{
         }
     }  
 }
+.tab__clicked{
+    background-color: #D4E1F4;
+    color: #504C58;
+    text-decoration-line: none;
+    text-transform: uppercase;
+    text-align: center;
+    border: 1px solid #46434C;
+    padding: 20px 50px;
+    border-bottom: none;
+    font-size: $fz__h4;
+    outline: none;
+}
+
 .price__right--column{
     width: 100%;
 }
