--- a/fix_pls_god/scss/style.scss
+++ b/fix_pls_god/scss/style.scss
@@ -8,6 +8,9 @@
 @import "_socialIcon.scss";
 // header
 /////////////////////////////////////////////////////////////////////////////////////////////
+html{
+    font-size: 10px;
+}
 header {
     width: 100%;
     height: 100vh;
