--- a/fix_pls_god/scss/_modalWindows.scss
+++ b/fix_pls_god/scss/_modalWindows.scss
@@ -7,7 +7,7 @@
     background-color: rgba(8, 16, 22, 0.55);
     top: 0;
     left: 0;
-    z-index: 5000;
+    z-index: 7000;
     display: flex;
 }
 .modal__dialog{
@@ -24,6 +24,7 @@
     align-items: center;
     text-align: center;
     box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
+    z-index: 7000;
     p{
         color: #D4E1F4;
         width: 70%;
@@ -39,8 +40,6 @@
         outline: none;
         font-size: 20px;
         &:hover{
-            background-color: #504C58;
-            color: #FA8A37;
             cursor: pointer;
         }
     }
@@ -58,8 +57,9 @@
     }
     img{
         position: absolute;
-        top: 0;
+        top: 60px;
         right: 0;
+        z-index: 7000;
     }
 }
 .modal__send--wrapper{
@@ -105,8 +105,6 @@
         align-items: center;
         text-decoration: none;
         &:hover{
-            background-color: #504C58;
-            color: #FA8A37;
             cursor: pointer;
         }    
     }
@@ -139,6 +137,7 @@
     box-shadow: 1px 1px 38px rgba(8, 16, 22, 0.5);
     span{
         color: #504C58;
+        font-size: 1.5rem;
     }
     input{
         color: #504C58;
@@ -161,8 +160,6 @@
         outline: none;
         font-size: 20px;
         &:hover{
-            background-color: #fff;
-            color: #504C58;
             cursor: pointer;
         }
     }
@@ -176,7 +173,7 @@
     }
     img{
         position: absolute;
-        top: 0;
+        top: 60px;
         right: 0;
     }
 }
@@ -207,6 +204,7 @@
     span{
         width: 70%;
         color: #504C58;
+        font-size: 1.3rem;
     }
     a{
         color: #fff;
